--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -120,5 +120,11 @@
   body {
     @apply bg-background text-foreground;
     scroll-behavior: smooth;
+
   }
+  
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
+  
 }
